Jack's fixes